--- a/header.html
+++ b/header.html
@@ -28,6 +28,7 @@
             <li><a href="mattress-toppers.html">Mattress Toppers</a></li>
             <li><a href="shelving-units.html">Shelving Units</a></li>
             <li><a href="spring-mattress.html">Spring Mattresses</a></li>
+            <li><a href="storage.html">Storage</a></li>
             <li><a href="tables-chairs.html">Tables &amp; Chairs</a></li>
           </ul>
         </li>
