--- a/index.html
+++ b/index.html
@@ -1,142 +1,140 @@
 <!DOCTYPE html>
 <html lang="fi">
+
 <head>
-    <meta charset="UTF-8" />
-    <title>Nest &amp; Living</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/rlk8ydx.css">
+  <meta charset="UTF-8" />
+  <title>Nest &amp; Living</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/rlk8ydx.css">
 </head>
+
 <body>
-    <!-- HEADER lisätään AJAXilla (header.html) -->
-
-    <!-- ===================== PÄÄsisältö (WRAPPER) ===================== -->
-
-        <!-- ===================== HERO SECTION ===================== -->
-        <section id="hero">
-        <div class="hero-wrapper">
-        <div class="logo-wrapper">
+  <!-- ===================== HERO SECTION ===================== -->
+  <section id="hero">
+    <div class="hero-wrapper">
+      <div class="logo-wrapper">
         <span class="logo-blur" aria-hidden="true"></span>
         <img class="logo-main" src="images/logo.png" alt="Logo">
-        </div>
-            <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
-            <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
-            </div>
-        </section>
+      </div>
+      <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
+      <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
+    </div>
+  </section>
 
-        <!-- ===================== ABOUT / BRAND STORY ===================== -->
-        <section class="with-texture" id="about">
-            <h2>What is Nest &amp; Living?</h2>
-            <p>
-                Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique taste and lifestyle.
-            </p>
-            <!-- … loput sisällöstä säilyy ennallaan … -->
-        </section>
+  <!-- ===================== ABOUT / BRAND STORY ===================== -->
+  <section class="with-texture" id="about">
+    <h2>What is Nest &amp; Living?</h2>
+    <p>
+      Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our
+      thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing
+      unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality
+      craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique
+      taste and lifestyle.
+    </p>
 
-        <!-- ===================== COLLECTION / NOW IN STORES ===================== -->  
-<section class="with-texture" id="collection">
-  <h2>Nest &amp; Living collection</h2>
+  </section>
 
-  <p>
-    Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
-  </p>
-
-  <!-- main-collection buttons -->
+  <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
+  <section class="with-texture" id="collection">
+    <h2>Nest &amp; Living collection</h2>
+    <p>
+      Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation.
+      Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship.
+      Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a
+      lasting impact on your daily life without compromising on affordability.
+    </p>
     <div class="collection-buttons">
-      <a href="bedroom.html" class="collection-btn">
-        <img src="images/bedroom.png" alt="Bedroom icon" />
-        Bedroom
+      <a href="collection/bedroom"          class="collection-btn"><img src="images/bedroom.png"           alt="Bedroom icon">Bedroom</a>
+      <a href="collection/living-room"       class="collection-btn"><img src="images/living-room.png"      alt="Living room icon">Living room</a>
+      <a href="collection/dining-room"       class="collection-btn"><img src="images/dining-room.png"      alt="Dining room icon">Dining room</a>
+      <a href="collection/storage-shelving" class="collection-btn"><img src="images/storage-shelving.png" alt="Storage &amp; Shelving icon">Storage &amp; Shelving</a>
+    </div>
+    <div id="collection-content"></div>
+  </section>
+
+  <section class="with-texture" id="promo">
+    <div class="promo-banner with-texture">
+      <h2 class="promo-banner__title">NOW IN STORES</h2>
+      <h3 class="promo-banner__subtitle with-texture">Special prices!</h3>
+    </div>
+    <p>
+      At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is
+      designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with
+      classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our
+      pieces offer more than just beauty—they enhance your comfort and well-being.
+    </p>
+  </section>
+
+  <!-- ===================== BEDROOM SOLUTIONS ===================== -->
+  <section class="with-texture" id="solutions">
+    <h2>Bedroom Solutions</h2>
+    <p>
+      In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic
+      appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group
+      values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product
+      in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep
+      solutions, ensuring comfort and durability across all styles.
+    </p>
+
+    <div class="solution-buttons">
+      <a href="beds.html" class="solution-btn">
+        <img src="images/beds.png" alt="Beds icon" />
+        Beds
       </a>
 
-      <a href="livingroom.html" class="collection-btn">
-        <img src="images/living-room.png" alt="Living room icon" />
-        Living room
+      <a href="bedding-accessories.html" class="solution-btn">
+        <img src="images/bedding-accessories.png" alt="Bedding Accessories icon" />
+        Bedding Accessories
       </a>
 
-      <a href="diningroom.html" class="collection-btn">
-        <img src="images/dining-room.png" alt="Dining room icon" />
-        Dining room
+      <a href="headboards.html" class="solution-btn">
+        <img src="images/headboards.png" alt="Headboards icon" />
+        Headboards
       </a>
 
-      <a href="storage-shelving.html" class="collection-btn">
-        <img src="images/storage-shelving.png" alt="Storage &amp; Shelving icon" />
-        Storage &amp; Shelving
+      <a href="mattresses-toppers.html" class="solution-btn">
+        <img src="images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
+        Mattresses &amp; Toppers
       </a>
     </div>
-
-</section>
-
-        <section class="with-texture" id="promo">
-            <div class="promo-banner with-texture">
-                <h2 class="promo-banner__title">NOW IN STORES</h2>
-                <h3 class="promo-banner__subtitle with-texture">Special prices!</h3>
-            </div>
-            <p>
-                At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
-            </p>
-        </section>
-
-        <!-- ===================== BEDROOM SOLUTIONS ===================== -->
-<section class="with-texture" id="solutions">
-  <h2>Bedroom Solutions</h2>
-  <p>
-    In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
-  </p>
-
-  <div class="solution-buttons">
-    <a href="beds.html" class="solution-btn">
-      <img src="images/beds.png" alt="Beds icon" />
-      Beds
-    </a>
-
-    <a href="bedding-accessories.html" class="solution-btn">
-      <img src="images/bedding-accessories.png" alt="Bedding Accessories icon" />
-      Bedding Accessories
-    </a>
-
-    <a href="headboards.html" class="solution-btn">
-      <img src="images/headboards.png" alt="Headboards icon" />
-      Headboards
-    </a>
-
-    <a href="mattresses-toppers.html" class="solution-btn">
-      <img src="images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
-      Mattresses &amp; Toppers
-    </a>
-  </div>
-</section>
+  </section>
 
 
-        <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
-        <section id="clients">
-            <h2>Clients</h2>
-            <p>
-                At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and deliver transforms not just your home but also enhances your daily lifestyle.
-            </p>
-            <!-- … -->
-        </section>
+  <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
+  <section id="clients">
+    <h2>Clients</h2>
+    <p>
+      At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture
+      goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our
+      commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and
+      deliver transforms not just your home but also enhances your daily lifestyle.
+    </p>
+    <!-- … -->
+  </section>
 
-        <!-- ===================== CONTACT FORM ===================== -->
-        <section id="contact">
-            <h2>For further questions, leave a message:</h2>
-            <form action="#" method="post">
-                <label for="message">Write your message here</label><br />
-                <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
+  <!-- ===================== CONTACT FORM ===================== -->
+  <section id="contact">
+    <h2>For further questions, leave a message:</h2>
+    <form action="#" method="post">
+      <label for="message">Write your message here</label><br />
+      <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
 
-                <label for="email">Enter your email here *</label><br />
-                <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
+      <label for="email">Enter your email here *</label><br />
+      <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
 
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
-    </main>
-    <!-- ===================== END PÄÄsisältö ===================== -->
+  </main>
+  <!-- ===================== END PÄÄsisältö ===================== -->
 
-    <!-- Palaa ylös -nappi -->
+  <!-- Palaa ylös -nappi -->
 
 
-    <!-- FOOTER lisätään AJAXilla (footer.html) -->
-    <script src="script.js"></script>
+  <!-- FOOTER lisätään AJAXilla (footer.html) -->
+  <script src="script.js"></script>
 </body>
+
 </html>
