--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <section class="with-texture" id="promo">
     <div class="promo-banner with-texture">
       <h2 class="promo-banner__title">NOW IN STORES</h2>
-      <h3 class="promo-banner__subtitle with-texture">Special prices!</h3>
+      <h3 class="promo-banner__subtitle with-texture">Special prices!*</h3>
     </div>
     <p>
-      At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is
+      *The prices might be special for you, but for us they are just a matter of business. At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is
       designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with
       classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our
       pieces offer more than just beauty—they enhance your comfort and well-being.
@@ -102,7 +102,7 @@
 
 
   <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
-  <section id="clients">
+  <section class="with-texture" id="clients">
     <h2>Clients</h2>
     <p>
       At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture
