Some improvements and fixes.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="collection/dining-room"       class="collection-btn"><img src="images/dining-room.png"      alt="Dining room icon">Dining room</a>
       <a href="collection/storage-shelving" class="collection-btn"><img src="images/storage-shelving.png" alt="Storage &amp; Shelving icon">Storage &amp; Shelving</a>
     </div>
-    <div id="collection-content"></div>
+    <div class="with-texture" id="collection-content"></div>
   </section>
 
   <section class="with-texture" id="promo">
