Some improvements and fixes.

--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
+
 <header class="header">
-  <div class="header-container with-texture">
+  <div class="header-container with-texture-2">
     <a href="index.html" class="logo">Nest &amp; Living</a>
 
     <button type="button" class="hamburger" aria-label="Toggle menu">
