--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </section>
 
   <!-- ===================== ABOUT / BRAND STORY ===================== -->
-  <section class="with-texture" id="about">
+  <section class="with-texture-2 cut-bottom" id="about">
     <h2>What is Nest &amp; Living?</h2>
     <p>
       Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our
@@ -53,7 +53,7 @@
     <div class="with-texture" id="collection-content"></div>
   </section>
 
-  <section class="with-texture" id="promo">
+  <section class="with-texture-2" id="promo">
     <div class="promo-banner with-texture">
       <h2 class="promo-banner__title">NOW IN STORES</h2>
       <h3 class="promo-banner__subtitle with-texture">Special prices!*</h3>
@@ -102,7 +102,7 @@
 
 
   <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
-  <section class="with-texture" id="clients">
+  <section class="with-texture cut-bottom" id="clients">
     <h2>Clients</h2>
     <p>
       At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture
@@ -114,7 +114,7 @@
   </section>
 
   <!-- ===================== CONTACT FORM ===================== -->
-  <section id="contact">
+  <section class="with-texture-2" id="contact">
     <h2>For further questions, leave a message:</h2>
     <form action="#" method="post">
       <label for="message">Write your message here</label><br />
