--- a/header.html
+++ b/header.html
@@ -23,9 +23,10 @@
             <li><a href="/products/beds-mattresses/">Beds &amp; Mattresses</a></li>
             <li><a href="/products/cabinets-storage/">Cabinets &amp; Storage</a></li>
             <li><a href="/products/seating/">Seating</a></li>
-            <li><a href="/products/sofas/">Sofa</a></li>
+            <li><a href="/products/sofas/">Sofas</a></li>
             <li><a href="/products/tables/">Tables</a></li>
             <li><a href="/products/textiles/">Textiles</a></li>
+            <li><a href="/products/pillows-duvets/">Pillows &amp; Duvets</a></li>
           </ul>
         </li>
       </ul>
