--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-container with-texture-2">
-    <a href="/" class="logo">Nest &amp; Living</a>
+    <a href="/" class="logo"><img src="/images/logo_small.png"           alt="Small logo">Nest &amp; Living</a>
 
     <button type="button" class="hamburger" aria-label="Toggle menu">
       <span></span><span></span><span></span>
@@ -18,7 +18,7 @@
           <button type="button" class="dropdown-toggle">
             Categories <span class="arrow">▼</span>
           </button>
-          <ul class="dropdown-menu menu-safe-click">
+          <ul class="dropdown-menu">
             <li><a href="/products/bedroom-furniture/" data-submenu="/products/bedroom-furniture/" >Bedroom Furniture</a></li>
             <li><a href="/products/beds-mattresses/" data-submenu="/products/beds-mattresses/">Beds &amp; Mattresses</a></li>
             <li><a href="/products/cabinets-storage/" data-submenu="/products/cabinets-storage/">Cabinets &amp; Storage</a></li>
