--- a/footer.html
+++ b/footer.html
@@ -55,16 +55,15 @@
          2) Address and contact information
          ===================================== -->
     <div class="footer-contact">
-      <p>Nest &amp; Living</p>
-      <p>Esimerkkikatu 10, 00100 Helsinki, Finland</p>
-      <p>Tel: <a href="tel:+358401234567">+358 40 123 4567</a> | Email: <a href="mailto:info@nestandliving.fi">info@nestandliving.fi</a></p>
+      <p>NEST &amp; LIVING</p>
+      <p>Tel: <a href="tel:+358401234567">+358 40 123 4567</a> | Email: <a href="mailto:support@nestliving.dk">support@nestliving.dk</a></p>
     </div>
 
     <!-- =====================================
          3) Copyright text
          ===================================== -->
     <div class="footer-bottom">
-      <p>&copy; 2025 Nest &amp; Living. All rights reserved.</p>
+      <p>&copy; 2025 NEST &amp; LIVING. All rights reserved.</p>
     </div>
   </div>
 </footer>
