--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
 
     <nav class="nav">
       <ul class="nav-links">
-        <li><a href="/#about">What is Nest &amp; Living?</a></li>
+        <li><a href="/#about">What is NEST &amp; LIVING?</a></li>
         <li><a href="/#collection">Collection</a></li>
         <li><a href="/#solutions">Bedroom Solutions</a></li>
         <li><a href="/#clients">Clients</a></li>
