--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Nest &amp; Living</title>
+  <title>NEST &amp; LIVING</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://use.typekit.net/rlk8ydx.css">
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/https://use.typekit.net/rlk8ydx.css">
 </head>
-
+<!-- HEADER USING AJAX (header.html) -->
 <body>
   <!-- ===================== HERO SECTION ===================== -->
    <main id="content">
@@ -16,7 +16,7 @@
     <div class="hero-wrapper">
       <div class="logo-wrapper">
         <span class="logo-blur" aria-hidden="true"></span>
-        <img class="logo-main" src="images/logo.png" alt="Logo">
+        <img class="logo-main" src="/images/logo.png" alt="Logo">
       </div>
       <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
       <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
@@ -24,12 +24,12 @@
   </section>
 
   <!-- ===================== ABOUT / BRAND STORY ===================== -->
-  <section class="with-texture-2 cut-bottom" id="about">
-    <h2>What is Nest &amp; Living?</h2>
+  <section class="with-texture-2" id="about">
+    <h2>What is NEST &amp; LIVING?</h2>
     <p>
-      Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our
+      Welcome to NEST &amp; LIVING, your premier destination for luxurious yet accessible bedroom furniture. Our
       thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing
-      unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality
+      unmatched comfort and ergonomic support. Each piece in the NEST &amp; LIVING family combines high-quality
       craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique
       taste and lifestyle.
     </p>
@@ -38,18 +38,18 @@
 
   <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
   <section class="with-texture" id="collection">
-    <h2>Nest &amp; Living collection</h2>
+    <h2>NEST &amp; LIVING collection</h2>
     <p>
       Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation.
       Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship.
-      Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a
+      Experience how the NEST &amp; LIVING collection can bring both elegance and tranquility to your home, creating a
       lasting impact on your daily life without compromising on affordability.
     </p>
     <div class="collection-buttons">
-      <a href="collection/bedroom"          class="collection-btn"><img src="images/bedroom.png"           alt="Bedroom icon">Bedroom</a>
-      <a href="collection/living-room"       class="collection-btn"><img src="images/living-room.png"      alt="Living room icon">Living room</a>
-      <a href="collection/dining-room"       class="collection-btn"><img src="images/dining-room.png"      alt="Dining room icon">Dining room</a>
-      <a href="collection/storage-shelving" class="collection-btn"><img src="images/storage-shelving.png" alt="Storage &amp; Shelving icon">Storage &amp; Shelving</a>
+      <a href="/collection/bedroom"          class="collection-btn"><img src="/images/bedroom.png"           alt="Bedroom icon">Bedroom</a>
+      <a href="/collection/living-room"       class="collection-btn"><img src="/images/living-room.png"      alt="Living room icon">Living room</a>
+      <a href="/collection/dining-room"       class="collection-btn"><img src="/images/dining-room.png"      alt="Dining room icon">Dining room</a>
+      <a href="/collection/storage-shelving" class="collection-btn"><img src="/images/storage-shelving.png" alt="Storage &amp; Shelving icon">Storage &amp; Shelving</a>
     </div>
     <div class="with-texture" id="collection-content"></div>
   </section>
@@ -60,7 +60,7 @@
       <h3 class="promo-banner__subtitle with-texture">Special prices!*</h3>
     </div>
     <p>
-      *The prices might be special for you, but they are just a matter of business for us. At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is
+      *The prices might be special for you, but they are just a matter of business for us. At NEST &amp; LIVING, we believe that exceptional quality should be within reach for everyone. Our furniture is
       designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with
       classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our
       pieces offer more than just beauty—they enhance your comfort and well-being.
@@ -79,23 +79,23 @@
     </p>
 
     <div class="solution-buttons">
-      <a href="beds.html" class="solution-btn">
-        <img src="images/beds.png" alt="Beds icon" />
+      <a href="/beds.html" class="solution-btn">
+        <img src="/images/beds.png" alt="Beds icon" />
         Beds
       </a>
 
-      <a href="bedding-accessories.html" class="solution-btn">
-        <img src="images/bedding-accessories.png" alt="Bedding Accessories icon" />
+      <a href="/bedding-accessories.html" class="solution-btn">
+        <img src="/images/bedding-accessories.png" alt="Bedding Accessories icon" />
         Bedding Accessories
       </a>
 
-      <a href="headboards.html" class="solution-btn">
-        <img src="images/headboards.png" alt="Headboards icon" />
+      <a href="/headboards.html" class="solution-btn">
+        <img src="/images/headboards.png" alt="Headboards icon" />
         Headboards
       </a>
 
-      <a href="mattresses-toppers.html" class="solution-btn">
-        <img src="images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
+      <a href="/mattresses-toppers.html" class="solution-btn">
+        <img src="/images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
         Mattresses &amp; Toppers
       </a>
     </div>
@@ -106,7 +106,7 @@
   <section class="with-texture cut-bottom" id="clients">
     <h2>Clients</h2>
     <p>
-      At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture
+      At NEST &amp; LIVING, our clients are at the heart of everything we do. We believe that quality bedroom furniture
       goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our
       commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and
       deliver transforms not just your home but also enhances your daily lifestyle.
@@ -118,23 +118,19 @@
   <section class="with-texture-2" id="contact">
     <h2>For further questions, leave a message:</h2>
     <form action="#" method="post">
-      <label for="message">Write your message here</label><br />
-      <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
+      <label for="message">Write your message here: *</label><br />
+      <textarea id="message" name="message" rows="5" cols="40" placeholder="*Required: Write your support request here..."></textarea><br />
 
-      <label for="email">Enter your email here *</label><br />
-      <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
+      <label for="email">Enter your email here: *</label><br />
+      <input type="email" id="email" name="email" placeholder="*Required: example@nestliving.dk" required /><br /><br />
 
       <button type="submit">Send Message</button>
     </form>
   </section>
 
   </main>
-  <!-- ===================== END PÄÄsisältö ===================== -->
-
-  <!-- Palaa ylös -nappi -->
-
-
-  <!-- FOOTER lisätään AJAXilla (footer.html) -->
+  <!-- ===================== END ===================== -->
+  <!-- FOOTER USING AJAX (footer.html) -->
   <script src="script.js"></script>
 </body>
 
