Styling and icons.

--- a/header.html
+++ b/header.html
@@ -19,14 +19,57 @@
             Categories <span class="arrow">▼</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="/products/bedroom-furniture/" data-submenu="/products/bedroom-furniture/" >Bedroom Furniture</a></li>
-            <li><a href="/products/beds-mattresses/" data-submenu="/products/beds-mattresses/">Beds &amp; Mattresses</a></li>
-            <li><a href="/products/cabinets-storage/" data-submenu="/products/cabinets-storage/">Cabinets &amp; Storage</a></li>
-            <li><a href="/products/seating/" data-submenu="/products/seating/">Seating</a></li>
-            <li><a href="/products/sofas/" data-submenu="/products/sofas/">Sofas</a></li>
-            <li><a href="/products/pillows-duvets/" data-submenu="/products/pillows-duvets/">Pillows &amp; Duvets</a></li>
-            <li><a href="/products/tables/" data-submenu="/products/tables/">Tables</a></li>
-            <li><a href="/products/textiles/" data-submenu="/products/textiles/">Textiles</a></li>
+
+  <li>
+    <a href="/products/bedroom-furniture/" data-submenu="/products/bedroom-furniture/">
+      <img src="/images/categories/bedroom-furniture.png" alt="Bedroom Furniture icon" class="category-icon">
+      Bedroom Furniture
+    </a>
+  </li>
+  <li>
+    <a href="/products/beds-mattresses/" data-submenu="/products/beds-mattresses/">
+      <img src="/images/categories/beds-mattresses.png" alt="Beds & Mattresses icon" class="category-icon">
+      Beds &amp; Mattresses
+    </a>
+  </li>
+  <li>
+    <a href="/products/cabinets-storage/" data-submenu="/products/cabinets-storage/">
+      <img src="/images/categories/cabinets-storage.png" alt="Cabinets & Storage icon" class="category-icon">
+      Cabinets &amp; Storage
+    </a>
+  </li>
+  <li>
+    <a href="/products/seating/" data-submenu="/products/seating/">
+      <img src="/images/categories/seating.png" alt="Seating icon" class="category-icon">
+      Seating
+    </a>
+  </li>
+  <li>
+    <a href="/products/sofas/" data-submenu="/products/sofas/">
+      <img src="/images/categories/sofas.png" alt="Sofas icon" class="category-icon">
+      Sofas
+    </a>
+  </li>
+  <li>
+    <a href="/products/pillows-duvets/" data-submenu="/products/pillows-duvets/">
+      <img src="/images/categories/pillows-duvets.png" alt="Pillows & Duvets icon" class="category-icon">
+      Pillows &amp; Duvets
+    </a>
+  </li>
+  <li>
+    <a href="/products/tables/" data-submenu="/products/tables/">
+      <img src="/images/categories/tables.png" alt="Tables icon" class="category-icon">
+      Tables
+    </a>
+  </li>
+  <li>
+    <a href="/products/textiles/" data-submenu="/products/textiles/">
+      <img src="/images/categories/textiles.png" alt="Textiles icon" class="category-icon">
+      Textiles
+    </a>
+  </li>
+</ul>
+
 
           </ul>
         </li>
