--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
   <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
-  <section class="with-texture cut-bottom" id="clients">
+  <section class="with-texture" id="clients">
     <h2>Clients</h2>
     <p>
       At NEST &amp; LIVING, our clients are at the heart of everything we do. We believe that quality bedroom furniture
