--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NEST &amp; LIVING</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="stylesheet" href="/https://use.typekit.net/rlk8ydx.css">
+  <link rel="stylesheet" href="https://use.typekit.net/rlk8ydx.css">
 </head>
 <!-- HEADER USING AJAX (header.html) -->
 <body>
