--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<div class="header">
   <div class="header-container with-texture-2">
     <a href="/" class="logo"><img src="/images/logo_small.png" alt="Small logo">Nest &amp; Living</a>
 
@@ -76,4 +76,4 @@
       </ul>
     </nav>
   </div>
-</header>
+</div>
