Product card fixes.

--- a/products/beds-mattresses/mattresses/5-zone/moon/silver/197679.html
+++ b/products/beds-mattresses/mattresses/5-zone/moon/silver/197679.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="197679" name="sku"/>
-<title>MOON SILVER DIVAN BED 120X200X17, POCKET 5-ZONE, PRIMO 84 LIGHT GREY (CZN15877) • Nest &amp; Living</title>
+<title>MOON SILVER POCKET SPRING MATTRESS 120X200X17, POCKET 5-ZONE, PRIMO 84 LIGHT GREY (CZN15877) • Nest &amp; Living</title>
 <link href="../../../../../../styles.css" rel="stylesheet"/>
 <script src="../../../../../../script.js">
 </script>
