--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197684.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197684.html
@@ -58,12 +58,12 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 80x200, pocket 7-zone. Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 80x200, pocket 7-zone. Primo 05 beige</h1>
 <p class="sku">197684</p>
 </header>
 <section class="product-gallery">
 <img alt="Moon Gold spring mattress 80x200 cm in Primo 05 beige color, showing the elegant quilted surface and pocket spring structure" loading="lazy" src="197684_1.jpg"/>
-<img alt="Side view of the Moon Gold divan bed mattress 80x200, highlighting its layered construction and comfortable height" loading="lazy" src="197684_2.jpg"/>
+<img alt="Side view of the Moon Gold pocket spring mattress mattress 80x200, highlighting its layered construction and comfortable height" loading="lazy" src="197684_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
