--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197685.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197685.html
@@ -37,7 +37,7 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 90x200, pocket 7-zone. Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 90x200, pocket 7-zone. Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197685</p>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
