--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197693.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197693.html
@@ -36,23 +36,23 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 120x200, pocket 7-zone. Primo 96 Anthracite</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 120x200, pocket 7-zone. Primo 96 Anthracite</h1>
 <p class="sku" itemprop="sku">197693</p>
 </header>
 <section class="product-gallery">
-<img alt="Moon Gold divan bed mattress in Primo 96 Anthracite fabric, showing the sleek and modern upholstered surface" itemprop="image" loading="lazy" src="197693_1.jpg"/>
-<img alt="Side angle of Moon Gold divan bed mattress 120x200 with 7-zone pocket spring system, upholstered in dark anthracite fabric" loading="lazy" src="197693_2.jpg"/>
+<img alt="Moon Gold pocket spring mattress mattress in Primo 96 Anthracite fabric, showing the sleek and modern upholstered surface" itemprop="image" loading="lazy" src="197693_1.jpg"/>
+<img alt="Side angle of Moon Gold pocket spring mattress mattress 120x200 with 7-zone pocket spring system, upholstered in dark anthracite fabric" loading="lazy" src="197693_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
 <p itemprop="description">
-Experience cozy comfort combined with timeless elegance with the Moon Gold divan bed mattress, sized 120x200 cm. This mattress features a 7-zone pocket spring system that supports the body in tailored zones to promote restful sleep. Upholstered in sophisticated Primo 96 Anthracite fabric, it enriches bedroom interiors with a modern, dark gray tone that blends effortlessly with a variety of decor styles.<br/><br/>
+Experience cozy comfort combined with timeless elegance with the Moon Gold pocket spring mattress mattress, sized 120x200 cm. This mattress features a 7-zone pocket spring system that supports the body in tailored zones to promote restful sleep. Upholstered in sophisticated Primo 96 Anthracite fabric, it enriches bedroom interiors with a modern, dark gray tone that blends effortlessly with a variety of decor styles.<br/><br/>
 
 Available in three tiers—Gold, Silver, and Bronze—this mattress is designed to meet diverse preferences and budgets, offering excellent value without compromising on quality. The Moon Gold mattress is part of the NEST &amp; LIVING collection, renowned for combining durable materials and practical design.<br/><br/>
 
 Versatile and easy to maintain, the mattress cover can be kept clean through regular vacuuming and gentle wiping. Its robust construction ensures long-lasting support and comfort, making it an ideal choice for nightly rejuvenation.<br/><br/>
 
-Choose this divan bed mattress for a perfect balance of style, support, and affordability, ideal for anyone seeking enhanced sleep quality in a stylish, functional package.
+Choose this pocket spring mattress mattress for a perfect balance of style, support, and affordability, ideal for anyone seeking enhanced sleep quality in a stylish, functional package.
 </p>
 </section>
 <section>
