--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197694.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197694.html
@@ -36,16 +36,16 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 140x200, pocket 7-zone. Primo 96 Anthracite</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 140x200, pocket 7-zone. Primo 96 Anthracite</h1>
 <p class="sku" itemprop="sku">197694</p>
 </header>
 <section class="product-gallery">
-<img alt="Moon Gold divan bed with 7-zone pocket spring mattress in dark anthracite Primo 96 fabric, size 140x200 cm" itemprop="image" loading="lazy" src="197694_1.jpg"/>
-<img alt="Close-up of the Moon Gold divan bed mattress pocket spring system contour and anthracite Primo 96 upholstery" loading="lazy" src="197694_2.jpg"/>
+<img alt="Moon Gold pocket spring mattress with 7-zone pocket spring mattress in dark anthracite Primo 96 fabric, size 140x200 cm" itemprop="image" loading="lazy" src="197694_1.jpg"/>
+<img alt="Close-up of the Moon Gold pocket spring mattress mattress pocket spring system contour and anthracite Primo 96 upholstery" loading="lazy" src="197694_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
-<p itemprop="description">Experience restful nights with the Moon Gold divan bed featuring a 7-zone pocket spring mattress designed for personalized support and superior comfort. Sized at 140x200 cm, this mattress is covered in stylish and durable Primo 96 anthracite fabric, providing a modern and elegant look for your bedroom. Available as part of the NEST &amp; LIVING collection, the Moon Gold mattress combines timeless design with practical features that cater to diverse sleeping preferences.</p>
+<p itemprop="description">Experience restful nights with the Moon Gold pocket spring mattress featuring a 7-zone pocket spring mattress designed for personalized support and superior comfort. Sized at 140x200 cm, this mattress is covered in stylish and durable Primo 96 anthracite fabric, providing a modern and elegant look for your bedroom. Available as part of the NEST &amp; LIVING collection, the Moon Gold mattress combines timeless design with practical features that cater to diverse sleeping preferences.</p>
 <p>The mattress offers zoned pocket springs that align with your body's contours, delivering targeted support and pressure relief throughout the night. Carefully crafted for longevity and ease of care, the anthracite fabric upholstery resists wear and is simple to maintain with routine vacuuming and damp cloth wipes.</p>
 <p>Choose the Gold tier to enjoy this premium mattress option that balances comfort, style, and functionality, perfect for those seeking a high-quality sleeping environment without compromising value.</p>
 </section>
