--- a/products/beds-mattresses/mattresses/memory-foam/moon/gold/197698.html
+++ b/products/beds-mattresses/mattresses/memory-foam/moon/gold/197698.html
@@ -56,19 +56,19 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 80x200, visco, Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold memory foam mattress 80x200, visco, Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197698</p>
 </header>
 <section class="product-gallery">
-<img alt="Moon Gold divan bed 80x200 with Primo 05 beige upholstery, front view" itemprop="image" loading="lazy" src="197698_1.jpg"/>
-<img alt="Side view of Moon Gold divan bed 80x200 with memory foam comfort in light beige" loading="lazy" src="197698_2.jpg"/>
+<img alt="Moon Gold memory foam mattress 80x200 with Primo 05 beige upholstery, front view" itemprop="image" loading="lazy" src="197698_1.jpg"/>
+<img alt="Side view of Moon Gold memory foam mattress 80x200 with memory foam comfort in light beige" loading="lazy" src="197698_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
 <p itemprop="description">
-Discover cozy comfort and timeless style with the Moon Gold divan bed 80x200 cm, designed to suit every sleeper’s needs. This model from the NEST &amp; LIVING collection offers versatile comfort options and a tasteful beige fabric finish (Primo 05 beige), complementing any bedroom décor with understated elegance.<br/><br/>
+Discover cozy comfort and timeless style with the Moon Gold memory foam mattress 80x200 cm, designed to suit every sleeper’s needs. This model from the NEST &amp; LIVING collection offers versatile comfort options and a tasteful beige fabric finish (Primo 05 beige), complementing any bedroom décor with understated elegance.<br/><br/>
 Available in the Gold tier, this mattress features a choice between 7-zone pocket springs that provide individualized support or ergonomically adapting visco memory foam for pressure relief and restful sleep. The elegant beige tone creates a warm, inviting atmosphere perfect for restful nights.<br/><br/>
-Crafted with user-friendly maintenance in mind, this mattress is easy to care for: regularly vacuum and wipe lightly with a damp cloth to keep it fresh. The combination of style, quality, and affordability makes the Moon Gold divan bed a smart choice from the NEST &amp; LIVING line for enhancing everyday luxury and comfort.
+Crafted with user-friendly maintenance in mind, this mattress is easy to care for: regularly vacuum and wipe lightly with a damp cloth to keep it fresh. The combination of style, quality, and affordability makes the Moon Gold memory foam mattress a smart choice from the NEST &amp; LIVING line for enhancing everyday luxury and comfort.
 </p>
 </section>
 <section>
