--- a/products/beds-mattresses/mattresses/memory-foam/moon/gold/197700.html
+++ b/products/beds-mattresses/mattresses/memory-foam/moon/gold/197700.html
@@ -59,7 +59,7 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 120x200, visco, Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold memory foam mattress 120x200, visco, Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197700</p>
 <meta content="Mattresses" itemprop="category"/>
 <meta content="NEST &amp; LIVING" itemprop="brand"/>
@@ -74,13 +74,13 @@
 </meta>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
-<img alt="Moon Gold divan bed mattress in classic beige Primo 05 fabric showing elegant upholstery and plush surface" loading="lazy" src="197700_1.jpg"/>
-<img alt="Side angle of Moon Gold divan bed mattress 120x200 cm in beige fabric highlighting memory foam comfort layer" loading="lazy" src="197700_2.jpg"/>
+<img alt="Moon Gold memory foam mattress mattress in classic beige Primo 05 fabric showing elegant upholstery and plush surface" loading="lazy" src="197700_1.jpg"/>
+<img alt="Side angle of Moon Gold memory foam mattress mattress 120x200 cm in beige fabric highlighting memory foam comfort layer" loading="lazy" src="197700_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
 <p itemprop="description">
-Experience cozy elegance in your bedroom with the Moon Gold divan bed mattress sized 120x200 cm. This mattress offers a balanced combination of style and function, designed to enhance your sleep quality at a great value. Part of the refined NEST &amp; LIVING collection, it reflects timeless design and versatile comfort tailored to your needs.
+Experience cozy elegance in your bedroom with the Moon Gold memory foam mattress mattress sized 120x200 cm. This mattress offers a balanced combination of style and function, designed to enhance your sleep quality at a great value. Part of the refined NEST &amp; LIVING collection, it reflects timeless design and versatile comfort tailored to your needs.
 </p>
 <p>
 This Gold tier mattress includes high-quality Primo 05 beige fabric upholstery with a soft feel and neutral tone to complement a variety of bedroom decors. You can select from two comfort solutions: a support system featuring 7-zone pocket springs that adapt individually to your body, or a memory foam layer that contours ergonomically for pressure relief and restful nights.
