--- a/products/beds-mattresses/mattresses/memory-foam/moon/gold/197705.html
+++ b/products/beds-mattresses/mattresses/memory-foam/moon/gold/197705.html
@@ -59,21 +59,21 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 80x200, visco, Primo 96 Anthracite</h1>
+<h1 itemprop="name">Moon Gold memory foam mattress 80x200, visco, Primo 96 Anthracite</h1>
 <p class="sku" itemprop="sku">197705</p>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
 <figure>
-<img alt="Moon Gold divan bed mattress with Primo 96 Anthracite fabric, size 80x200 cm, shown with memory foam comfort option" loading="lazy" src="197705_1.jpg"/>
+<img alt="Moon Gold memory foam mattress mattress with Primo 96 Anthracite fabric, size 80x200 cm, shown with memory foam comfort option" loading="lazy" src="197705_1.jpg"/>
 </figure>
 <figure>
-<img alt="Close-up of Moon Gold divan bed mattress fabric and stitching detail in Anthracite color" loading="lazy" src="197705_2.jpg"/>
+<img alt="Close-up of Moon Gold memory foam mattress mattress fabric and stitching detail in Anthracite color" loading="lazy" src="197705_2.jpg"/>
 </figure>
 </section>
 <section>
 <h2>Description</h2>
 <p itemprop="description">
-Experience cozy and elegant comfort in your bedroom with the Moon Gold divan bed mattress, sized 80 x 200 cm. This mattress is part of the NEST &amp; LIVING collection, which combines timeless design, functionality, and exceptional value. Designed for those who seek both style and a restful night’s sleep, the mattress is crafted with durable materials and high-quality finishes.
+Experience cozy and elegant comfort in your bedroom with the Moon Gold memory foam mattress mattress, sized 80 x 200 cm. This mattress is part of the NEST &amp; LIVING collection, which combines timeless design, functionality, and exceptional value. Designed for those who seek both style and a restful night’s sleep, the mattress is crafted with durable materials and high-quality finishes.
 
 Choose from two tasteful color options: classic beige or modern anthracite—the model presented here features the sophisticated anthracite fabric Primo 96. For personalized comfort, select between two support systems: a 7-zone pocket spring which provides targeted body support, or a memory foam layer that gently contours to your body shape, offering adaptive relief.
 
