--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197686.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197686.html
@@ -36,17 +36,17 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 120x200 cm, pocket 7-zone spring mattress, Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 120x200 cm, pocket 7-zone spring mattress, Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197686</p>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
-<img alt="Moon Gold divan bed mattress in Primo 05 beige, size 120 by 200 cm, showcasing pocket 7-zone spring system" loading="lazy" src="197686_1.jpg"/>
-<img alt="Side view of the Moon Gold divan bed mattress highlighting its elegant beige upholstery and quality craftsmanship" loading="lazy" src="197686_2.jpg"/>
+<img alt="Moon Gold pocket spring mattress mattress in Primo 05 beige, size 120 by 200 cm, showcasing pocket 7-zone spring system" loading="lazy" src="197686_1.jpg"/>
+<img alt="Side view of the Moon Gold pocket spring mattress mattress highlighting its elegant beige upholstery and quality craftsmanship" loading="lazy" src="197686_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
 <p itemprop="description">
-Experience restful nights with the Moon Gold divan bed mattress in size 120×200 cm, featuring a high-quality 7-zone pocket spring system designed to provide tailored support to your body’s contours. Available in NEST &amp; LIVING’s elegant Primo 05 beige fabric, this mattress combines modern design with versatile comfort.
+Experience restful nights with the Moon Gold pocket spring mattress mattress in size 120×200 cm, featuring a high-quality 7-zone pocket spring system designed to provide tailored support to your body’s contours. Available in NEST &amp; LIVING’s elegant Primo 05 beige fabric, this mattress combines modern design with versatile comfort.
 </p>
 <p>
 Offered in three tiers—Gold, Silver, and Bronze—this mattress caters to varying preferences and needs without altering its core supportive properties. Choose between two color options, classic beige or sophisticated anthracite, and two comfort styles, the 7-zone pocket spring system or memory foam, both engineered for superior sleep quality.
