--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197689.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197689.html
@@ -36,16 +36,16 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 180x200, pocket 7-zone. Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 180x200, pocket 7-zone. Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197689</p>
 </header>
-<section aria-label="Gallery of Moon Gold divan bed in Primo 05 beige" class="product-gallery">
-<img alt="Moon Gold divan bed 180x200 cm in Primo 05 beige showing the mattress laying flat with beige upholstery and clean stitching" itemprop="image" loading="lazy" src="197689_1.jpg"/>
-<img alt="Side view of Moon Gold divan bed 180x200 cm with Primo 05 beige cover displaying plush surface and subtle texture" loading="lazy" src="197689_2.jpg"/>
+<section aria-label="Gallery of Moon Gold pocket spring mattress in Primo 05 beige" class="product-gallery">
+<img alt="Moon Gold pocket spring mattress 180x200 cm in Primo 05 beige showing the mattress laying flat with beige upholstery and clean stitching" itemprop="image" loading="lazy" src="197689_1.jpg"/>
+<img alt="Side view of Moon Gold pocket spring mattress 180x200 cm with Primo 05 beige cover displaying plush surface and subtle texture" loading="lazy" src="197689_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
-<p itemprop="description">Experience cozy comfort and elegant design with the Moon Gold spring mattress divan bed measuring 180x200 cm. This mattress incorporates a 7-zone pocket spring system tailored to support your body individually for a restful night’s sleep. The mattress is upholstered in Primo 05 beige fabric, offering a timeless and stylish look that complements diverse bedroom decors. Part of the NEST &amp; LIVING collection, it balances quality and affordability, making it a versatile choice for anyone seeking both comfort and style. Available in Gold tier, this mattress provides excellent durability and ergonomic support to enhance your sleeping experience.</p>
+<p itemprop="description">Experience cozy comfort and elegant design with the Moon Gold spring mattress pocket spring mattress measuring 180x200 cm. This mattress incorporates a 7-zone pocket spring system tailored to support your body individually for a restful night’s sleep. The mattress is upholstered in Primo 05 beige fabric, offering a timeless and stylish look that complements diverse bedroom decors. Part of the NEST &amp; LIVING collection, it balances quality and affordability, making it a versatile choice for anyone seeking both comfort and style. Available in Gold tier, this mattress provides excellent durability and ergonomic support to enhance your sleeping experience.</p>
 </section>
 <section>
 <h2>Technical specifications</h2>
