--- a/products/beds-mattresses/mattresses/7-zone/moon/gold/197695.html
+++ b/products/beds-mattresses/mattresses/7-zone/moon/gold/197695.html
@@ -39,18 +39,18 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 160x200, pocket 7-zone. Primo 96 Anthracite</h1>
+<h1 itemprop="name">Moon Gold pocket spring mattress 160x200, pocket 7-zone. Primo 96 Anthracite</h1>
 <p class="sku" itemprop="sku">197695</p>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
-<img alt="Moon Gold divan bed 160x200 in Primo 96 Anthracite fabric, side view showing plush mattress with subtle texture" loading="lazy" src="197695_1.jpg"/>
-<img alt="Moon Gold divan bed 160x200 in Primo 96 Anthracite fabric, angled view highlighting 7-zone pocket spring mattress" loading="lazy" src="197695_2.jpg"/>
+<img alt="Moon Gold pocket spring mattress 160x200 in Primo 96 Anthracite fabric, side view showing plush mattress with subtle texture" loading="lazy" src="197695_1.jpg"/>
+<img alt="Moon Gold pocket spring mattress 160x200 in Primo 96 Anthracite fabric, angled view highlighting 7-zone pocket spring mattress" loading="lazy" src="197695_2.jpg"/>
 </section>
 <section>
 <h2>Description</h2>
-<p itemprop="description">Experience a restful night with the Moon Gold divan bed mattress, sized 160x200 cm. Designed to combine timeless elegance with functional comfort, this mattress is a refined choice within the NEST &amp; LIVING collection. Featuring a sophisticated anthracite fabric (Primo 96), the bed offers a modern, stylish aesthetic suited for any bedroom décor.<br/><br/>
+<p itemprop="description">Experience a restful night with the Moon Gold pocket spring mattress mattress, sized 160x200 cm. Designed to combine timeless elegance with functional comfort, this mattress is a refined choice within the NEST &amp; LIVING collection. Featuring a sophisticated anthracite fabric (Primo 96), the bed offers a modern, stylish aesthetic suited for any bedroom décor.<br/><br/>
 Choose from two distinctive tiers—Gold, Silver, and Bronze—which define the features and comfort level available. The mattress supports your body with a 7-zone pocket spring system that provides targeted support to promote healthy sleep posture. Alternatively, a memory foam comfort option is available for those seeking adaptive softness.<br/><br/>
-The Moon Gold divan bed emphasizes versatility and style, combining durable materials for easy care with an unbeatable price-quality value, making restorative sleep accessible for everyone.</p>
+The Moon Gold pocket spring mattress emphasizes versatility and style, combining durable materials for easy care with an unbeatable price-quality value, making restorative sleep accessible for everyone.</p>
 </section>
 <section>
 <h2>Technical specifications</h2>
