--- a/products/beds-mattresses/mattresses/memory-foam/moon/gold/197699.html
+++ b/products/beds-mattresses/mattresses/memory-foam/moon/gold/197699.html
@@ -36,16 +36,16 @@
 <main id="product" role="main">
 <article itemscope="" itemtype="https://schema.org/Product">
 <header>
-<h1 itemprop="name">Moon Gold divan bed 90x200, visco, Primo 05 beige</h1>
+<h1 itemprop="name">Moon Gold memory foam mattress 90x200, visco, Primo 05 beige</h1>
 <p class="sku" itemprop="sku">197699</p>
 </header>
 <section class="product-gallery" itemprop="image" itemscope="" itemtype="https://schema.org/ImageGallery">
-<img alt="Moon Gold divan bed mattress in Primo 05 beige fabric, size 90x200 cm, showing mattress surface with fine textile texture" itemprop="image" loading="lazy" src="197699_1.jpg"/>
+<img alt="Moon Gold memory foam mattress mattress in Primo 05 beige fabric, size 90x200 cm, showing mattress surface with fine textile texture" itemprop="image" loading="lazy" src="197699_1.jpg"/>
 <img alt="Side angle view of Moon Gold mattress with memory visco foam, highlighting beige upholstery and mattress thickness" itemprop="image" loading="lazy" src="197699_2.jpg"/>
 </section>
 <section itemprop="description">
 <h2>Description</h2>
-<p>The Moon Gold divan bed mattress in 90x200 cm size offers a cozy and elegant atmosphere for your bedroom. Designed for comfort and versatility, it is part of the NEST &amp; LIVING collection, renowned for merging quality with timeless style. This high-quality mattress features a carefully selected Primo 05 beige fabric that adds a calm, neutral tone to your room.</p>
+<p>The Moon Gold memory foam mattress mattress in 90x200 cm size offers a cozy and elegant atmosphere for your bedroom. Designed for comfort and versatility, it is part of the NEST &amp; LIVING collection, renowned for merging quality with timeless style. This high-quality mattress features a carefully selected Primo 05 beige fabric that adds a calm, neutral tone to your room.</p>
 <p>This mattress is available in three tiers: Gold, Silver, and Bronze, allowing you to select the option that best fits your comfort preferences and budget. Choose between two comfort solutions: a 7-zone pocket spring system providing targeted support for your body or adaptive memory visco foam that contours to your shape for personalized comfort. Both options are designed to enhance restful sleep through ergonomic support.</p>
 <p>Colors include classic beige and modern anthracite styles, with the current model showcasing the classic beige upholstery. The mattress thickness of 21 cm ensures adequate cushioning and durability for a supportive sleep surface.</p>
 <p>Care for this mattress is straightforward—regular vacuuming combined with wiping the upholstery gently with a damp cloth preserves its fresh, clean appearance, thanks to durable materials built to last. The Moon Gold mattress is a superb addition to any bedroom seeking a balance of elegant design, functional comfort, and excellent value within the NEST &amp; LIVING range.</p>
